fixed filter box overflow on mobile

--- a/src/app/components/customer-table/customer-table.component.css
+++ b/src/app/components/customer-table/customer-table.component.css
@@ -12,7 +12,7 @@
   min-width: 100px !important;
 }
 
-.row {
+#table-box {
   overflow: auto;
 }
 
